@@ -1,3 +1,8 @@
+2011-09-23  Antoine Levitt  <antoine.levitt@gmail.com>
+
+	* erc-button.el (erc-button-next-function): Scoping fix
+	(Bug#9487).
+
 2011-07-04  Vivek Dasmohapatra  <vivek@etla.org>
 
 	* erc.el (erc-generate-new-buffer-name): Reuse old buffer names
